--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,22 @@
-worker_processes 4;
+server {
 
-events {
+    server_name localhost example.loc;
+    listen 80;
+    index index.html index.htm;
 
-	worker_connections 1024;
-}
+    root /var/www/;
+    gzip on;
+    gzip_types application/javascript image/* text/css;
+    location / {
+        try_files $uri $uri/ =404;
+    }
 
-http {
+    location ~* \.(jpg|jpeg|png|gif|ico)$ {
 
-    include       /etc/nginx/mime.types;
-	server {
+        expires 30d;
+    }
+    location ~* \.(css|js)$ {
 
-	    server_name localhost example.loc;
-		listen 80;
-		index index.html index.htm index.php;
-
-		root /src/dist;
-		gzip on;
-		gzip_types application/javascript image/* text/css;
-		location / {
-			try_files $uri $uri/ =404;
-		}
-
-        location ~* \.(jpg|jpeg|png|gif|ico)$ {
-
-            expires 30d;
-        }
-        location ~* \.(css|js)$ {
-
-            expires 7d;
-        }
+        expires 7d;
     }
 }
