--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
+    "watch": "webpack --watch",
     "build": "rm -rf ./dist && webpack",
     "build:prod": "rm -rf ./dist && webpack --config webpack.prod.config.js"
   },
