--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.5.0",
     "bootstrap": "^4.3.1",
+    "handlebars": "^4.1.1",
+    "handlebars-loader": "^1.7.1",
     "jquery": "^3.3.1",
-    "navigo": "^7.1.2"
+    "navigo": "^7.1.2",
+    "postcss-loader": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -26,8 +30,12 @@
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
+    "pug": "^2.0.3",
+    "pug-html-loader": "^1.1.5",
+    "pug-loader": "^2.4.0",
     "raw-loader": "^2.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
